-Instruct people on the correct way to deal with '*.cards' files if they try
 to open it as a separate database (Kensor0).
-When editing a card where different sister cards have different tags, ask if
 the tags should be applied to the current card or to all sister cards.
-Fix Windows crash when using the card browser with cards imported from
 Supermemo (reported by Piotr).
-If adding an extra tag when importing a 'cards' file, don't keep the tag
 'Untagged' (patch by crcmail0). If you were affected by this issue before,
 'compact database' will solve this.


Mnemosyne 2.2.1 : 2013-04-15

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

-The premade cards from the old 1.x website have now all been converted to the
 new 2.x cards format and put on the new website. This will make importing
 much easier, as graphics are bundled (thanks to Patrick Kenny for the
 conversion).
-For txt import, a text file can now contain a fourth column which will be
 mapped to the 'notes' field of a Vocabulary card.
-When editing or browsing cards, don't reset the state of the scheduler such
 that you need to press 'show answer' again or such that a new card appears
 (reported by Gnome).
-Remember which tags where expanded/collapsed in the tag tree (requested a.o
 by Troy Guze).
-Correctly update flag 'hide pronunciation' in the popup menu (reported by
 Tom Cato Amundsen).
-When merging duplicate cards, merge tags also (requested by Stephan Maseizik).
-Fix regression where all the dialogs would have generic names ('mnemosyne')
 as opposed to e.g. 'Add cards'.
-Correctly format clozes in latex, e.g. [Lorentz force law]
 <$>[\mathbf{F}]=[q]([\mathbf{E}]+[\mathbf{v}\times\mathbf{B}]</$>
 ()requested by acdenh). If you want literal [] in latex, use \left[
 and \right].
-Fix crash when converting multiple cards at the same time between e.g.
 Vocabulary card type and Map card type (reported by Gnome).